# todo

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: crud.py  main.py  models.py  schemas.py
app/api/: crud.py  tasks.py
app/core/: database.py  schemas.py
migrations/: env.py
migrations/versions/: 7202c0efccac_основные_таблицы.py
tests/: init_db.py  manifest.json
tests/reports/html-report/: index.html
tests/reports/html-report/js/: search_index.js
tests/reports/html-report/specs/: task_management.html
tests/reports/xml-report/: result.xml
tests/step_impl/: step_impl.py
