[project]
name = "task-manager"
version = "0.1.0"
description = "Менеджер задач с CRUD операциями на FastAPI"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.16.4",
    "fastapi>=0.116.1",
    "uvicorn>=0.35.0",
    "sqlalchemy>=2.0.36",
    "pydantic>=2.10.4",
]

[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "ruff>=0.12.9",
    "getgauge==0.4.11",
    "requests>=2.31.0",
]
